# Mars-Data

./: .dockerignore  .gitignore  Cargo.toml  Cranky.toml  Dockerfile  LICENSE  README.md  TODO.md  config.toml  deny.toml  mars_data.py  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  codeql-analysis.yml  linux.yml  pythonapp.yml  windows.yml
src/: lib.rs  main.rs
src/mars/: api.rs  calculations.rs  config.rs  mod.rs  weather.rs
tests/: api_tests.rs  calculations_tests.rs  config_tests.rs  mars_data_checker.py
