[package]

name = "mars-data"
version = "0.1.4"
authors = ["Conor Forde"]
rust-version = "1.96.0"
edition = '2024'
default-run = "marsdata"
repository = "https://www.github.com/Snowda/Mars-Data"

description = "Mars weather data parser"
keywords = ["mars", "planet", "data"]

[[bin]]
name = "marsdata"
path = "src/main.rs"

[features]
default = ["std"]
std = [ "serde" ]

[dependencies]

# Astro data
astro = "2.0.0"

# JSON
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = "1.0.143"

# Networking
reqwest = { version = "0.12.23", default-features = false, features = ["json", "gzip", "rustls-tls"] }

# Threading
tokio = { version = "1.47.1", features = ["full"] }

# Time library
chrono = "0.4.42"

# Stack-allocated strings and vecs with known bounds
arrayvec = "0.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
