[package]

name = "mars-data"
version = "0.1.4"
authors = ["Conor Forde"]
rust-version = "1.96.0"
edition = '2024'
default-run = "marsdata"
repository = "https://www.github.com/Snowda/Mars-Data"

description = "Mars weather data parser"
keywords = ["mars", "planet", "data"]

[[bin]]
name = "marsdata"
path = "src/main.rs"

[features]
default = ["std"]
std = []
integration_tests = []

[dependencies]

# Astro data
astro = "2.0.0"

# JSON
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Config
toml = "0.8"

# Networking
reqwest = { version = "0.12.23", default-features = false, features = ["json", "gzip", "rustls-tls"] }

# Web framework
axum = "0.8"

# Threading
tokio = { version = "1.47.1", features = ["full"] }

# Time library
chrono = { version = "0.4.42", features = ["serde"] }

# Stack-allocated strings and vecs with known bounds
arrayvec = { version = "0.7", features = ["serde"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
