[package]

name = "mars-data"
version = "0.1.4"
authors = ["Conor Forde"]
rust-version = "1.96.0"
edition = '2024'
license = "MIT"
default-run = "marsdata"
repository = "https://www.github.com/Snowda/Mars-Data"

description = "Mars weather data parser"
keywords = ["mars", "planet", "data"]

[[bin]]
name = "marsdata"
path = "src/main.rs"

[features]
default = ["std"]
std = []
integration_tests = []

[dependencies]

# Astro data
astro = "2.0.0"

# JSON
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Config
toml = "0.8"

# Networking
# rustls-no-provider: reqwest 0.13's `rustls` feature pulls the aws-lc-rs provider
# (needs a C toolchain); we select the pure-Rust ring provider ourselves to keep
# builds hermetic and cross-compilable. See the CryptoProvider install in weather.rs.
reqwest = { version = "0.13.4", default-features = false, features = ["json", "gzip", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Web framework
axum = "0.8"

# Threading
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }

# Time library
chrono = { version = "0.4.42", features = ["serde"] }

# Stack-allocated strings and vecs with known bounds
arrayvec = { version = "0.7", features = ["serde"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.dev]
# line tables keep backtraces while avoiding the cost of generating + linking full debuginfo
debug = "line-tables-only"
opt-level = 0

[lints.clippy]
# Reconcile clippy defaults with the project's explicit-return convention (migrated from
# the former Cranky.toml when the project moved off cargo-cranky to plain cargo clippy).
needless_return = "allow"
redundant_closure = "allow"
